--- a/about.css
+++ b/about.css
@@ -146,6 +146,11 @@ img {
   background-color: rgba(255, 255, 255, 0.95);
 }
 
+.nav-logo img{
+  text-decoration: none!important;
+  width: 200px;
+}
+
 .nav__logo {
   /* height: 4.5rem; */
   /* height: 2.5rem; */
