--- a/about.css
+++ b/about.css
@@ -288,6 +288,15 @@ img {
   font-size: 3.6rem;
 }
 
+.course-content-list{
+
+}
+
+.course-content-list h3{
+  margin-top: 2rem;
+}
+
+
 .webdev-course .class--heading{
   background: -webkit-linear-gradient(60deg, #7F7FD5, #86A8E7,#91EAE4);
   -webkit-background-clip: text;
