updated footer nav logo

--- a/about.css
+++ b/about.css
@@ -480,6 +480,10 @@ img {
 .footer {
   padding: 10rem 3rem;
   background-color: #37383d;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer__nav {
@@ -490,7 +494,8 @@ img {
 }
 
 .footer__item {
-  margin-right: 4rem;
+  margin-right: 2rem;
+  margin-left: 2rem;
 }
 
 .footer__link {
