--- a/style.css
+++ b/style.css
@@ -612,6 +612,10 @@ h4 {
 .footer {
   padding: 10rem 3rem;
   background-color: #37383d;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer__nav {
@@ -622,7 +626,8 @@ h4 {
 }
 
 .footer__item {
-  margin-right: 4rem;
+  margin-right: 2rem;
+  margin-left: 2rem;
 }
 
 .footer__link {
