--- a/style.css
+++ b/style.css
@@ -769,12 +769,15 @@ h4 {
   font-size: 2.5rem;
   
 }
+/* ////////////////////////////////////////
 
+           workbox
+           ////////////////////////////////////*/
 
 .workbox {
   position: relative;
   width: 100%;
-  height: 30rem;
+  /* height: 30rem; */
   overflow: hidden;
   margin-bottom: 1rem;
   box-shadow: 5px 10px 8px #888888;
@@ -1129,6 +1132,15 @@ h4 {
       width: 4rem;          
       font-size: 2rem;
     }
+    .hover-text{
+      font-size: 1rem;
+      font-weight: bold;
+      color: black;
+    }
+    .description h3{
+      font-size:1.8rem;
+      
+    } 
   
   }
 .team-member .descriptionClass{
